<resources>
    <string name="app_name">AcademyTutorialApp</string>

    <string name="greeting_message">Welcome to Chrissy\'s App !</string>

    <string name="name_label">Name:</string>
    <string name="age_label">Age:</string>
    <string name="phone_label">Phone:</string>
    <string name="email_label">Email:</string>


    <string name="enter_name_hint">Enter Your Name</string>

    <string name="enter_age_hint">Enter Your Age</string>

    <string name="enter_email_hint">Enter Your Email</string>

    <string name="enter_phone_hint">Enter Your Phone Number</string>

    <string name="main_string_button_text">Click Here</string>

    <string name="second_string_button_text">Click Here</string>

    <string name="form_button">Become a Member</string>

    <string name="enter_name_field">Enter Name</string>

    <string name="submit_your_task">Submit</string>

    <string name="onViewImageButton">Click Here For Khaz</string>
</resources>
