<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/pink_purple"
    tools:context="com.example.dell.academytutorialapp.MainActivity">


    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:gravity="center"
        android:textColor="@color/dark_blue"
        android:text="@string/greeting_message" />
    <EditText
        android:id="@+id/enter_name_field"
        android:hint="@string/enter_name_hint"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/main_string_button_text"
        android:onClick="onButtonClicked"
        android:textSize="30dp"
        android:fontFamily="cursive"
        android:background="@color/baby_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"/>
    <Button
        android:id="@+id/Click_Here"
        android:text="@string/second_string_button_text"
        android:textSize="30dp"
        android:fontFamily="cursive"
        android:background="@color/mixed_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"/>

    <Button

        android:text="@string/onViewImageButton"
        android:fontFamily="sans-serif-condensed"
        android:onClick= "onViewImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"/>

    <Button
        android:text="@string/form_button"
        android:onClick="onFormButton"
        android:layout_width="match_parent"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="onGridView"
        android:text= "pictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
