<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/khaz"
    tools:context="com.example.dell.academytutorialapp.DisplayFormActivity">
    <TextView
        android:id="@+id/form_enter_name_field"
        android:text="@string/enter_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/golden_red"
        android:gravity="center"
        android:layout_gravity="center"


        />

    <EditText

        android:hint="@string/enter_name_field"
        android:layout_height="wrap_content"
        android:id="@+id/enter_name_field"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/form_enter_email_field"
        android:text="@string/enter_email_hint"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:textColor="@color/golden_red"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/enter_email_hint"
        android:inputType="textEmailAddress"
        android:id="@+id/enter_email_field"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/form_enter_phone_field_field"
        android:text="@string/enter_phone_hint"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:textColor="@color/golden_red"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/enter_phone_hint"
        android:inputType="number"
        android:id="@+id/enter_phone_field"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/form_enter_age_field_field"
        android:text="@string/enter_age_hint"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/golden_red"
        android:layout_height="wrap_content" />

    <EditText

        android:hint="@string/enter_age_hint"
        android:inputType="number"
        android:id="@+id/enter_age_field"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:onClick="onSubmitProcess"
        android:hint="@string/submit_your_task"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

<!-- onClick = onSubmitPressed for the toast to work -->
</LinearLayout>
</ScrollView>